--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,6 +30,9 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=True
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -71,5 +74,6 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType1,Name="Wood")
++PhysicalSurfaces=(Type=SurfaceType2,Name="Carpet")
 
 
